--- a/strand/iOS/Strand/Strand/DFIncomingViewController.xib
+++ b/strand/iOS/Strand/Strand/DFIncomingViewController.xib
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6254"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFIncomingViewController">
             <connections>
+                <outlet property="profileWithContextView" destination="zPr-Cm-BJD" id="uzr-Bk-x7m"/>
+                <outlet property="swipableButtonImageView" destination="2mx-jU-aCa" id="eaS-UA-Co4"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -13,7 +16,30 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zPr-Cm-BJD" customClass="DFProfileWithContextView">
+                    <rect key="frame" x="20" y="8" width="560" height="45"/>
+                    <color key="backgroundColor" red="0.90588241820000004" green="0.45490199329999997" blue="0.1215686351" alpha="1" colorSpace="deviceRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="45" id="TWY-DJ-5i5"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2mx-jU-aCa" customClass="DFSwipableButtonImageView">
+                    <rect key="frame" x="0.0" y="61" width="600" height="539"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="zPr-Cm-BJD" secondAttribute="trailing" constant="20" id="7E0-nj-uTi"/>
+                <constraint firstAttribute="trailing" secondItem="2mx-jU-aCa" secondAttribute="trailing" id="B5p-f8-xqg"/>
+                <constraint firstItem="zPr-Cm-BJD" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="8" id="FPS-pN-6FD"/>
+                <constraint firstItem="zPr-Cm-BJD" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="IFQ-6k-nMp"/>
+                <constraint firstItem="2mx-jU-aCa" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="SnY-My-dtP"/>
+                <constraint firstAttribute="bottom" secondItem="2mx-jU-aCa" secondAttribute="bottom" id="YEq-GX-NQs"/>
+                <constraint firstItem="2mx-jU-aCa" firstAttribute="top" secondItem="zPr-Cm-BJD" secondAttribute="bottom" constant="8" id="vrB-mW-HXz"/>
+            </constraints>
+            <nil key="simulatedStatusBarMetrics"/>
         </view>
     </objects>
 </document>
