--- a/strand/iOS/Strand/Strand/DFSwapUpsellView.xib
+++ b/strand/iOS/Strand/Strand/DFSwapUpsellView.xib
@@ -11,7 +11,7 @@
             <rect key="frame" x="0.0" y="0.0" width="381" height="379"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Udl-Nz-hEj" customClass="DFActionButton">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Udl-Nz-hEj" customClass="DFActionButton">
                     <rect key="frame" x="110" y="216" width="161" height="38"/>
                     <color key="backgroundColor" red="0.96078431369999995" green="0.31764705879999999" blue="0.18823529410000001" alpha="1" colorSpace="calibratedRGB"/>
                     <state key="normal" title="Match my Photos">
@@ -26,7 +26,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view hidden="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TJc-Nh-Bq1" userLabel="Matching activity wrapper">
-                    <rect key="frame" x="147" y="201" width="88" height="77"/>
+                    <rect key="frame" x="147" y="197" width="88" height="77"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Matching" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="200" translatesAutoresizingMaskIntoConstraints="NO" id="bwY-f3-PRj">
                             <rect key="frame" x="8" y="8" width="72" height="21"/>
